[project]
name = "imagegen"
version = "0.1.0"
description = "Streamlit app for generating Kerala election posters using Gemini 3 Pro Image Preview"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "google-genai>=0.3.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
